[package]
name = "mims"
version = "0.1.0"
authors = ["Tiago Castro <tiago.castro@mayadata.io>"]
edition = "2018"

[dependencies]
nats = "0.7.4"
structopt = "0.3.15"
log = "0.4.11"
humantime = "2.0.1"
tokio = { version = "0.2", features = ["full"] }
futures-util = "0.3.5"
env_logger = "0.7"
tokio-nats = "0.1.0"